Bug 426359 - Repeatedly click on a file, or folder spams right click menu with repeated "Open with" entry.
Summary: Repeatedly click on a file, or folder spams right click menu with repeated "O...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: copy-paste (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-10 09:29 UTC by Marc
Modified: 2020-10-26 00:07 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.3
Sentry Crash Report:


Attachments
Screenshot of konsole with extended menu. (411.00 KB, image/jpeg)
2020-09-10 09:29 UTC, Marc
Details
screenshot showing extra items added to konsole's context menu (128.72 KB, image/png)
2020-09-11 23:16 UTC, Kevin Wilson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marc 2020-09-10 09:29:58 UTC
Created attachment 131532 [details]
Screenshot of konsole with extended menu.

SUMMARY
In version 20.8.1 :
When opening konsole/yakuake and right-clicking on an any folder, the menu extends by one "Open with..." entry.


STEPS TO REPRODUCE
1. Open konsole or yakuake
2. Type 'ls'
3. Right-click any folder or file, close the menu and right-click again.

OBSERVED RESULT
The menu extends, by one entry each right-click.

EXPECTED RESULT
Just the normal right-click menu.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Arch Linux x86_64 5.8.7-arch1-1
(available in About System)
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.73.0
Qt Version: 5.15.0

ADDITIONAL INFORMATION
Comment 1 Kevin Wilson 2020-09-11 23:16:48 UTC
Created attachment 131570 [details]
screenshot showing extra items added to konsole's context menu

I can confirm this bug on konsole-20.08.1 and am marking it accordingly.

For me, it extends by one "<horizontal line>\nCopy Location" (hopefully that makes sense to people-who-aren't-me) each time I right-click the same file.  When I click on something else and then right-click that first item again, the menu is reset to its original state.  

The items immediately following "Open with..." in the menu are "Copy Location" and the preceding horizontal line.
Comment 2 Kurt Hindenburg 2020-10-26 00:07:08 UTC
Git commit 53af2a7fb96588ac04cb4a319badf2dc62ff51c8 by Kurt Hindenburg, on behalf of Carlos Alves.
Committed on 26/10/2020 at 00:06.
Pushed by hindenburg into branch 'master'.

Fix 'Copy Location' and 'Open With' issues with context menu

Update mouse events in mousePressEvent so the events are updated with the mouse stopped as well as moving.
Related: bug 423860
FIXED-IN: 20.08.3

M  +0    -10   src/filterHotSpots/FileFilterHotspot.cpp
M  +9    -8    src/session/SessionController.cpp
M  +4    -0    src/terminalDisplay/TerminalDisplay.cpp

https://invent.kde.org/utilities/konsole/commit/53af2a7fb96588ac04cb4a319badf2dc62ff51c8