Fix 'Copy Location' and 'Open With' issues with context menu

Update mouse events in mousePressEvent so the events are updated with the mouse stopped as well as moving.

BUG: 426359
BUG: 423860
FIXED-IN: 20.08.3